objects/CompanyName__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of Company Names used to define which company the user belongs to.</description>
    <fields>
        <fullName>AreaCode__c</fullName>
        <label>Area Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankDetail__c</fullName>
        <label>Bank Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyLabel__c</fullName>
        <label>Company Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>Used to compare with CompanyName in the profile of the user to determine which company the user belongs to.</description>
        <label>Company Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company type : ASIA / US / ...</description>
        <label>Company</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JEOLAddress__c</fullName>
        <label>JEOL Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrgAddress__c</fullName>
        <label>Organization Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrgFax__c</fullName>
        <label>Organization Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OrgPhone__c</fullName>
        <label>Organization Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QuotationPrintSignUserID__c</fullName>
        <description>Contains the ID of the user whose the signature will be used when printing the quotations.</description>
        <label>QuotationPrintSignUserID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxationRate__c</fullName>
        <label>Taxation Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>CompanyName</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>CompanyName__c</columns>
        <columns>CompanyLabel__c</columns>
        <columns>AreaCode__c</columns>
        <columns>BankDetail__c</columns>
        <columns>JEOLAddress__c</columns>
        <columns>OrgAddress__c</columns>
        <columns>OrgPhone__c</columns>
        <columns>OrgFax__c</columns>
        <columns>QuotationPrintSignUserID__c</columns>
        <columns>TaxationRate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
    </listViews>
</CustomObject>